behavioral: generate FFmpeg redistribution materials from inventory
Generate deterministic consolidated notices, architecture-specific CycloneDX SBOMs, review snapshots, and input/output checksums from the reviewed inventory. Preserve unique notice texts and keep human approval separate from generation.

Reject stale materials before packaging, retain source access and standalone FDK notices, add the missing pinned libunibreak license, and exercise the generator and layer contracts in the normal test suite.